<resources>
    <string name="app_name">EmpData</string>
    <string name="login">Login</string>
    <string name="employeeEmail">Email</string>
    <string name="employeePassword">Password</string>
    <string name="need_an_account_signup">Need an account?<u>SIGN UP</u></string>
    <string name="or">OR</string>
    <string name="forget_password">forget password?</string>
    <string name="add_employees">Add Employees</string>
    <string name="show_employees">Show employees</string>
    <string name="addEmployees">SAVE</string>
    <string name="age">Age</string>
    <string name="position">Position</string>
    <string name="salary">Salary</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nameValue">Name:</string>
    <string name="ageValue">Age:</string>
    <string name="positionValue">Position</string>
    <string name="salaryValue">Salary:</string>
    <string name="emailValue">Email:</string>
    <string name="passwordValue">Password:</string>
    <string name="values">Value</string>
    <string name="background">background</string>
    <string name="foreground">foreground</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="coding">Coding</string>
    <string name="pick_image">Pick Image</string>
    <string name="my_devices">My Devices</string>
    <string name="logout">Logout</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="api_key">97f8ff7f847b4e75b1ac0e43bc2d888e</string>
    <string name="news">News</string>
    <string name="title_activity_details">DetailsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="general">General</string>
    <string name="health">health</string>
    <string name="science">Science</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>
    <string name="time">Time</string>
    <string name="_20">20</string>
    <string name="_13">13</string>

    <string name="communication_error">Error in getting data. Please try again later.</string>
    <string name="most_popular_movies">Most Popular Movies</string>
    <string name="overview">Overview</string>
    <string name="top_billed_cast">Top Billed Cast</string>
    <string name="details">Details</string>
    <string name="homepage">Home Page</string>
    <string name="tagline">Tagline</string>
    <string name="Runtime">Runtime</string>
    <string name="filter">Filter</string>
    <string name="release_date">Release date:</string>
    <string name="from">Select From</string>
    <string name="to">Select To</string>
    <string name="clear_all">Clear All</string>
    <string name="error_date_filter">Please select from and to dates.</string>
    <string name="no_movies">Oops! No result found.</string>
    <string name="error_data">Something went wrong! Please try again later.</string>
    <string name="done">Done</string>
    <string name="movie_name">movie_name</string>
    <string name="rating_tv">rating_tv</string>
    <string name="title_activity_maps">MapsActivity</string>


</resources>