<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashActivity">

    <ImageView
        android:id="@+id/imageBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/splash"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/background" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageEmployee"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/employee"
        android:layout_marginTop="120dp"
        app:civ_border_width="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/foreground" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto_bold"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="@id/imageEmployee"
        app:layout_constraintEnd_toEndOf="@id/imageEmployee"
        app:layout_constraintTop_toBottomOf="@id/imageEmployee"/>

</androidx.constraintlayout.widget.ConstraintLayout>