<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/layout"
    android:layout_height="wrap_content"
    android:background="@drawable/border"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/empName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/nameValue"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/empAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/ageValue"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/empName"
        app:layout_constraintStart_toStartOf="@id/empName"/>

    <TextView
        android:id="@+id/empPosition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/positionValue"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/empAge"
        app:layout_constraintStart_toStartOf="@id/empAge"/>

    <TextView
        android:id="@+id/empSalary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/salaryValue"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/empPosition"
        app:layout_constraintStart_toStartOf="@id/empPosition"/>

    <TextView
        android:id="@+id/empEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/emailValue"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/empSalary"
        app:layout_constraintStart_toStartOf="@id/empSalary"/>

    <TextView
        android:id="@+id/empPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/passwordValue"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/empEmail"
        app:layout_constraintStart_toStartOf="@id/empEmail"/>


    <TextView
        android:id="@+id/empNameValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/values"
        android:layout_marginStart="15dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/empName"
        app:layout_constraintStart_toEndOf="@id/empName"
        app:layout_constraintBottom_toBottomOf="@id/empName"
        />

    <TextView
        android:id="@+id/empAgeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/values"
        android:layout_marginStart="15dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/empAge"
        app:layout_constraintStart_toEndOf="@id/empAge"
        app:layout_constraintBottom_toBottomOf="@id/empAge"/>

    <TextView
        android:id="@+id/empPositionValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/values"
        android:layout_marginStart="15dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/empPosition"
        app:layout_constraintStart_toEndOf="@id/empPosition"
        app:layout_constraintBottom_toBottomOf="@id/empPosition"/>

    <TextView
        android:id="@+id/empSalaryValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/values"
        android:layout_marginStart="15dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/empSalary"
        app:layout_constraintStart_toEndOf="@id/empSalary"
        app:layout_constraintBottom_toBottomOf="@id/empSalary"/>

    <TextView
        android:id="@+id/empEmailValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/values"
        android:layout_marginStart="15dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/empEmail"
        app:layout_constraintStart_toEndOf="@id/empEmail"
        app:layout_constraintBottom_toBottomOf="@id/empEmail"/>

    <TextView
        android:id="@+id/empPasswordValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/values"
        android:layout_marginStart="15dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/empPassword"
        app:layout_constraintStart_toEndOf="@id/empPassword"
        app:layout_constraintBottom_toBottomOf="@id/empPassword"/>



</androidx.constraintlayout.widget.ConstraintLayout>